sfexchange-dreamforce-project/src/objects/QuizzQuestion__c.object
<CustomObject>
    <description>Questions on a quizz</description>
    <fields>
        <fullName>NbCorrectAuto__c</fullName>
        <label>Number Correct Answers</label>
        <summaryFilterItems>
            <field>QuizzAnswer__c.IsCorrect__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuizzAnswer__c.QuizzQuestionRef__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuizzNameAuto__c</fullName>
        <description>Used in Flows to avoid querying Quizzes for nothing.</description>
        <formula>QuizzRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quizz Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuizzRef__c</fullName>
        <label>Quizz</label>
        <referenceTo>Quizz__c</referenceTo>
        <relationshipLabel>Quizz Questions</relationshipLabel>
        <relationshipName>Quizz_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multiple Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quizz Question</label>
    <nameField>
        <label>Quizz Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quizz Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>